--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,45 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    background: #f0e5c1;
+}
+
+.main{
+    width: 100%;
+   
+    align-items: center;
+    background-color: orange;
+    border-radius: 8px;
+    padding: 10%;
+    margin-top: 20%;
+  
+    margin-left: 10%;
+    margin-bottom: 5%;
+}
+.text{
+    border: 1px solid aquamarine;
+    border-radius: 6px;
+    width: 100%;
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.text:focus,text:focus{
+    outline: none;
+    border-color: sandybrown;
+    caret-color: snow;
+}
+.button{
+    background-color: wheat;
+    border: none;
+    border-radius: 6px;
+    font-size: 20px;
+    line-height: 48px;
+    width: 100%;
+    color: rgb(148, 28, 28);
+    font-weight: bold;
+    vertical-align: middle;
+}
+h4{
+    font-size: 25px;
+}
+h5{
+    font-size: 25px;
+}
