--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,13 +6,13 @@
                 <h4>Welcome to TO-DO  <br>
                 <h5>Register Here</h5></h4><br>
             <form  (ngSubmit)="register()">
-            <input type="text" placeholder="Username"  class="text" name="uname"  ><br><br>
+            <input type="text" placeholder="Username"  class="text" name="uname"  [(ngModel)]="uname" ><br><br>
             
 
-            <input type="text" placeholder="Account number"  class="text" name="acno"  ><br><br>
+            <input type="text" placeholder="Userid"  class="text" name="uid"  [(ngModel)]="uid" ><br><br>
            
 
-            <input type="password" placeholder="password" class="text" name="pswd" ><br><br>
+            <input type="password" placeholder="password" class="text" name="pswd"  [(ngModel)]="pswd"><br><br>
             
             <input type="submit" value="Register" class="button butefct"><br><br>   
             <a routerLink="">Login</a>
