sort array using drag and drop method completed

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@ body{
     margin-bottom: 5%;
 }
 .text{
-    border: 1px solid aquamarine;
+    border: 1px solid black;
     border-radius: 6px;
     width: 100%;
     font-size: 17px;
