--- a/src/app/todo/todo.component.css
+++ b/src/app/todo/todo.component.css
@@ -1,30 +1,47 @@
 .header{
-    background-color: lightpink;
-    text-align: center;
-    width: 400px;
-    border: 1px solid black;
-    border-radius: 20;
-    padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    margin-top: 40px;
+    width: 30%;
+   
+    align-items: center;
+    background-color: orange;
+    border-radius: 8px;
+    padding: 5%;
+    margin-top: 10%;
+  
+    margin-left: 35%;
+    margin-bottom: 5%;
 }
 h2{
-    color: green;
+    margin-left: 28%;
+    color:black;
 }
-.input-todo{
-    width: 150px;
-    height: 30px;
-    font-size: 17px;
-    border-radius: 10px;
-    padding-left: 5px;
-    margin-left: 30%;
-}
-.button{
-    width: 25%;
-    padding: 6px 14px;
-}
+
+
+    .button{
+        background-color: wheat;
+        border: none;
+        border-radius: 6px;
+        font-size: 20px;
+        line-height: 48px;
+        width: 100%;
+        color: rgb(148, 28, 28);
+        font-weight: bold;
+        vertical-align: middle;
+    }
+
 .container{
     width: 250px;
+}
+.text{
+    border: 1px solid black;
+    border-radius: 6px;
+    width: 75%;
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 12%;
+    padding-left: 5px;
+}
+.text:focus,text:focus{
+    outline: none;
+    border-color: sandybrown;
+    caret-color: snow;
 }
