--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -3,10 +3,16 @@
     <div>
         <form (ngSubmit)="add()">
             <div class="row">
-                <input class="input-todo" type="text" placeholder="Userid" name="uid" [(ngModel)]="uid">
-                <input class="input-todo" type="text" placeholder="Add a Todo" name="todo" [(ngModel)]="todo">
-                <input type="submit" value="ADD">
-                <input type="submit" value="View Event" (click)="showTodos()"><br>
+                <input class="text" type="text" placeholder="Userid" name="uid" [(ngModel)]="uid"><br>
+
+
+                <input class="text" type="text" placeholder="Add a Todo" name="todo" [(ngModel)]="todo"><br>
+
+
+                <input type="submit" class="button" value="ADD"><br>
+
+
+                <input type="submit" class="button" value="View Event" (click)="showTodos()">
 
             </div>
         </form>
