--- a/src/app/viewtodo/viewtodo.component.html
+++ b/src/app/viewtodo/viewtodo.component.html
@@ -1,28 +1,25 @@
-<form>
-    <div class="container">
-        <div class="jumbotron">
-            <div class="row">
-                <div class="col">
-                    <h1>Todo History</h1><br>
-                    
-                    <table>
-                        <thead>
-                            <tr>
-                                <th >Todo List</th>
-                                
-                            </tr>
-                        </thead>
-                        <tbody>
-
-                            <tr *ngFor="let data of datas;let i=index;">
-                               <td>{{data}}</td>
-
-                            </tr> 
-                        </tbody>
-                    </table>
-                </div>
+<div class="container">
+    <h1>ToDo HISTORY</h1>
+    <div class="list-container">
+        <div class="todo-container column-container">
+            <div class="list"
+                cdkDropList
+                #todoList="cdkDropList"
+                [cdkDropListData]="datas"
+                (cdkDropListDropped)="drop($event)">
+                <h2>ToDo List</h2>
+                <mat-card *ngFor="let data of datas;let i=index;" cdkDrag>
+                    <mat-card-header>
+                        <mat-card-title>{{data}}</mat-card-title>
+                    </mat-card-header>
+                </mat-card>
             </div>
         </div>
     </div>
-</form>
+</div>
+
+<div>
+    <input type="button" value="ADD ToDo" class="button" (click)="addtodo()">
+</div>
+
 
